# giga

./: README.md
giga/: CMakeLists.txt  README.md
giga/benchmarks/: add.cpp  conv2d.cpp  dense.cpp  softmax.cpp  upsample.cpp
giga/cmake/: GIGAConfig.cmake.in  GIGAConfigVersion.cmake.in
giga/doc/: Doxyfile
giga/giga/: float16.h  giga.cpp  giga.h
giga/giga/doc/: export.h  mainpage.h
giga/python/: pyproject.toml
giga/python/src/GIGA_export/: README.md  convert_utils.py  nnef_to_giga.py  onnx_to_giga.py
giga/tests/: add.cpp  allocation.cpp  avg_pooling.cpp  callback.cpp  comparison.cpp  conv2d.cpp  conv2d_results.py  dense.cpp  float16.cpp  initialization.cpp  map_and_fill.cpp  reshape.cpp  softmax.cpp  upsample.cpp  utils.h  view.cpp
giga_soft/: CMakeLists.txt  Doxyfile  README.md
giga_soft/cpu/: CMakeLists.txt  README.md  giga_cpu.cpp  giga_cpu.h  giga_cpu_add.cpp  giga_cpu_conv2d.cpp  giga_cpu_dense.cpp  giga_cpu_memory.cpp  giga_cpu_softmax.cpp  giga_cpu_upsample.cpp  giga_cpu_version.cpp.in  giga_cpu_version.h  utils.h
